--- a/app/Resources/views/ville/edit.html.twig
+++ b/app/Resources/views/ville/edit.html.twig
@@ -1,21 +1,29 @@
 {% extends 'BackOfficeBundle:Default:layout.html.twig' %}
 
 {% block content %}
-    <h1>Ville edit</h1>
-
+<main class="ui container">
+  <section class="ui raised segment">
+    <h1 class="ui horizontal divider header">
+      <i class="home icon"></i>
+      Edition Ville
+    </h1>
     {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('ville_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    {{ form_widget(edit_form) }}
+    <div class="ui hidden divider"></div>
+    <div class="ui grid">
+      <div class="six wide column">
+        <input class="fluid ui primary button" type="submit" value="Editer" />
+        {{ form_end(edit_form) }}
+      </div>
+      <div class="six wide column">
+        <a class="fluid ui primary button" href="{{ path('ville_index') }}">Retourner à la liste</a>
+      </div>
+      <div class="four wide column">
+        {{ form_start(delete_form) }}
+        <input class="ui red button" type="submit" value="Supprimer">
+        {{ form_end(delete_form) }}
+      </div>
+    </div>
+  </section>
+</main>
 {% endblock %}
