--- a/app/Resources/views/internaute/show.html.twig
+++ b/app/Resources/views/internaute/show.html.twig
@@ -1,44 +1,43 @@
 {% extends 'BackOfficeBundle:Default:layout.html.twig' %}
 
 {% block content %}
-    <h1>Internaute</h1>
+<main class="ui container">
+  <section class="ui raised segment">
+    <h1 class="ui horizontal divider header">
+      <i class="user icon"></i>
+      Internaute
+    </h1>
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ internaute.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ internaute.nom }}</td>
-            </tr>
-            <tr>
-                <th>Prenom</th>
-                <td>{{ internaute.prenom }}</td>
-            </tr>
-            <tr>
-                <th>Tel</th>
-                <td>{{ internaute.tel }}</td>
-            </tr>
-            <tr>
-                <th>Mail</th>
-                <td>{{ internaute.mail }}</td>
-            </tr>
-        </tbody>
+    <table class="ui selectable celled table">
+      <tbody>
+          <tr>
+              <th>Id</th>
+              <td>{{ internaute.id }}</td>
+          </tr>
+          <tr>
+              <th>Nom</th>
+              <td>{{ internaute.nom }}</td>
+          </tr>
+          <tr>
+              <th>Prenom</th>
+              <td>{{ internaute.prenom }}</td>
+          </tr>
+          <tr>
+              <th>Tel</th>
+              <td>{{ internaute.tel }}</td>
+          </tr>
+          <tr>
+              <th>Mail</th>
+              <td>{{ internaute.mail }}</td>
+          </tr>
+      </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('internaute_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('internaute_edit', { 'id': internaute.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    {{ form_start(delete_form) }}
+    <input class="ui red right floated button" type="submit" value="Supprimer">
+    {{ form_end(delete_form) }}
+    <a class="ui primary button" href="{{ path('internaute_index') }}">Retourner à la liste</a>
+    <a class="ui primary button" href="{{ path('internaute_edit', { 'id': internaute.id }) }}">Edition</a>
+  </section>
+</main>
 {% endblock %}
