--- a/web/css/covoit.css
+++ b/web/css/covoit.css
@@ -32,3 +32,12 @@ input {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
+label {
+  display: block;
+  margin: 0 0 .28571429rem 0;
+  color: rgba(0,0,0,.87);
+  font-size: .92857143em;
+  font-weight: 700;
+  text-transform: none;
+}
