--- a/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
@@ -22,7 +22,7 @@
           <div class="content">
             <span class="header">Nombre d'internautes à plus de 2 trajets</span>
             <div class="description">
-              {{ dump(nb_internaute_trajet_2) }}
+              {{ nb_internaute_trajet_2 }}
             </div>
           </div>
         </div>
