--- a/src/BackOfficeBundle/Resources/views/Default/navbar.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/navbar.html.twig
@@ -1,7 +1,7 @@
 <div class="ui five item menu">
   <a class="item" href="/adminbo">Accueil Admin</a>
-  <a class="item" href="/adminbo/voiture">Voiture</a>
-  <a class="item" href="/adminbo/ville">Ville</a>
-  <a class="item" href="/adminbo/internaute">Internaute</a>
-  <a class="item" href="/adminbo/stats">Statistiques</a>
+  <a class="item" href="/adminbo/voiture"><i class="car icon"></i> Voiture</a>
+  <a class="item" href="/adminbo/ville"><i class="home icon"></i> Ville</a>
+  <a class="item" href="/adminbo/internaute"><i class="user icon"></i> Internaute</a>
+  <a class="item" href="/adminbo/stats"><i class="bar chart icon"></i> Statistiques</a>
 </div>
