--- a/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
@@ -10,7 +10,7 @@
       <div class="four wide column">
         <div class="ui card">
           <div class="content">
-            <span class="header">Nombre d'internautes</span>
+            <span class="header">Nombre d'internautes :</span>
             <div class="description">
               {{ nb_internaute }}
             </div>
@@ -20,7 +20,7 @@
       <div class="four wide column">
         <div class="ui card">
           <div class="content">
-            <span class="header">Nombre d'internautes à plus de 2 trajets</span>
+            <span class="header">Nombre d'internautes à plus de 2 trajets :</span>
             <div class="description">
               {{ nb_internaute_trajet_2 }}
             </div>
@@ -30,7 +30,7 @@
       <div class="four wide column">
         <div class="ui card">
           <div class="content">
-            <span class="header">Top 5 villes de départs</span>
+            <span class="header">Top 5 villes de départs :</span>
             <div class="description">
               <ul>
                 {% for ville in top_depart %}
@@ -44,7 +44,7 @@
       <div class="four wide column">
         <div class="ui card">
           <div class="content">
-            <span class="header">Top 5 villes d'arrivées</span>
+            <span class="header">Top 5 villes d'arrivées :</span>
             <div class="description">
               <ul>
                 {% for ville in top_arrivee %}
