--- a/app/Resources/views/internaute/show.html.twig
+++ b/app/Resources/views/internaute/show.html.twig
@@ -8,6 +8,10 @@
       Internaute
     </h1>
 
+    <div class="ui message">
+      {{ dump(internaute) }}
+    </div>
+
     <table class="ui selectable celled table">
       <tbody>
           <tr>
