--- a/app/Resources/views/internaute/show.html.twig
+++ b/app/Resources/views/internaute/show.html.twig
@@ -10,6 +10,7 @@
 
     <div class="ui message">
       {{ dump(internaute) }}
+      {{ dump(voirure) }}
     </div>
 
     <table class="ui selectable celled table">
