--- a/app/Resources/views/internaute/show.html.twig
+++ b/app/Resources/views/internaute/show.html.twig
@@ -10,7 +10,8 @@
 
     <div class="ui message">
       {{ dump(internaute) }}
-      {{ dump(voirure) }}
+      {{ dump(voiture) }}
+      {{ dump(ville) }}
     </div>
 
     <table class="ui selectable celled table">
