--- a/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
@@ -8,8 +8,8 @@
         <!-- <input class="prompt" type="text" placeholder="Common passwords...">
         <i class="search icon"></i> -->
         {{ form_start(form) }}
-          {{ form_widget(form.search, { 'attr': {'class': 'prompt'} }) }}
-          {{ form_widget(form.Rechercher, { 'attr': {'class': 'prompt'} }) }}
+          {{ form_widget(form.search, { 'attr': {'class': 'ui input'} }) }}
+          {{ form_widget(form.Rechercher, { 'attr': {'class': 'ui primary button'} }) }}
         {{ form_end(form) }}
       </div>
     </div>
