--- a/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,7 @@
         {{ form_start(form) }}
           {{ form_widget(form.search, { 'attr': {'class': 'ui input'} }) }}
           <div class="ui hidden divider"></div>
-          <input class="ui primary button" type="submit" name="search" value="Rechercher" />
+          <input class="ui primary button" type="submit" name="searchall" value="Rechercher" />
           <input class="ui primary button" type="submit" name="searchd" value="Rechercher sur la ville de départ" />
           <input class="ui primary button" type="submit" name="searcha" value="Rechercher sur la ville d'arrivée" />
         {{ form_end(form) }}
